--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">DEVELOPER</string>
+    <string name="Title">...MY SOCIAL MEDIA HANDLES...</string>
+    <string name="Developername">OGOLA SOSPETER</string>
+    <string name="developeremail">ogolasospeter62@gmail.com</string>
+    <string name="twitteraccount">OKONGO OGOLA</string>
 </resources>
